# tsp-toolkit-kic-cli

./: .clippy.toml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mocharc.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINING.md  README.md  RELEASE.md  cargo.licenses.json  index.d.ts  index.js  npm.licenses.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: pr.yml  release.yml  release_candidate.yml
.github/workflows/release/: action.yml
instrument-repl/: Cargo.toml
instrument-repl/src/: command.rs  error.rs  instrument.rs  lib.rs  repl.rs  state_machine.rs  tsp_error.rs
instrument-repl/src/resources/: TspLinkNodeDetails.tsp  kic_2600.tsp  kic_common.tsp  kic_tti.tsp  kic_versatest.tsp  mod.rs
kic/: Cargo.toml
kic-debug/: Cargo.toml
kic-debug-visa/: Cargo.toml
kic-debug-visa/src/: command.rs  error.rs  main.rs
kic-debug-visa/src/debugger/: mod.rs
kic-debug-visa/src/debugger/watchpoint/: mod.rs
kic-debug-visa/src/resources/: mod.rs  tspdbg.tsp
kic-debug/src/: command.rs  error.rs  lib.rs  main.rs  process.rs
kic-debug/src/debugger/: mod.rs
kic-debug/src/debugger/breakpoint/: mod.rs
kic-debug/src/debugger/variable/: mod.rs
kic-debug/src/resources/: kiDebugger.tsp  mod.rs  tspdbg.tsp
kic-discover/: Cargo.toml
kic-discover-visa/: Cargo.toml
kic-discover-visa/src/: lib.rs  main.rs  visa.rs
kic-discover-visa/src/ethernet/: mod.rs
kic-discover-visa/src/instrument_discovery/: mod.rs
kic-discover-visa/src/usbtmc/: mod.rs
kic-discover/src/: lib.rs  main.rs  process.rs
kic-discover/src/ethernet/: mod.rs
kic-discover/src/instrument_discovery/: mod.rs
kic-discover/src/usbtmc/: mod.rs
kic-lib/: Cargo.toml
kic-lib/src/instrument/: login.rs  mod.rs  script.rs
kic-lib/src/interface/: connection_addr.rs
kic-lib/src/model/: ki2600.rs  ki3700.rs  tti.rs  versatest.rs
kic-lib/src/protocol/: mod.rs  visa.rs
kic-visa/: Cargo.toml
kic-visa/src/: error.rs  main.rs
kic/src/: error.rs  main.rs  process.rs
scripts/: copy-bin.js  pre-commit
tests/typescript/: config.ts  ki2600.test.ts  ki3700.test .ts  kiTTI.test.ts  kiTrebuchet.test.ts  tspop.test.ts  util.ts
tsp-instrument/: Cargo.toml
tsp-instrument/src/interface/: async_stream.rs
tsp-instrument/src/model/: ki2600.rs  tti.rs  versatest.rs
