[workspace]
members = [
    "kic",
    "kic-discover",
    "instrument-repl",
]
resolver = "2"

[workspace.package]
version = "0.13.2"
authors = ["Keithley Instruments, LLC"]
edition = "2021"
repository = "https://github.com/TEK-Engineering/tsp-toolkit-kic-cli"
#TODO Minimum Supported Rust Version Reasoning:
# * Optional dependencies in feature flags was introduced in 1.60


[workspace.dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive", "cargo", "string"] }
colored = "2.0.0"
exitcode = "1.1.2"
instrument-repl = { path = "instrument-repl" }
jsonrpc-http-server = "18.0"
local-ip-address = "0.5.1"
mockall = { version = "0.11.4", features = ["nightly"] }
mdns = { git = "https://github.com/jaime-sense/mdns", rev = "498cf7cceaf7e2683a2e352b7e8a15dfc1c29037" } # until https://github.com/dylanmckay/mdns/pull/27 is closed
minidom = "0.15.0"
phf = { version = "0.11.1", features = ["macros"] }
reqwest = "0.11"
rpassword = "7.2.0"
rusb = "0.9.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tmc = { git = "https://github.com/esarver/rusb-usbtmc" }
tracing = { version = "0.1", features = ["async-await"] }
tracing-subscriber = "0.3.16"
tsp-toolkit-kic-lib = { git = "https://github.com/TEK-Engineering/tsp-toolkit-kic-lib.git", tag = "v0.13.2"}
regex = "1.9.1"
