[workspace]
members = [
    "kic",
    "kic-visa",
    "kic-debug",
    "kic-debug-visa",
    "kic-discover",
    "kic-discover-visa",
    "instrument-repl",
    "kic-lib",
]
resolver = "2"

[workspace.package]
version = "0.21.2"
authors = ["Tektronix, Inc."]
edition = "2021"
repository = "https://github.com/tektronix/tsp-toolkit-kic-cli"
#TODO Minimum Supported Rust Version Reasoning:
# * Optional dependencies in feature flags was introduced in 1.60


[workspace.dependencies]
anyhow = "1.0.81"
bytes = "1.5.0"
chrono = "0.4.34"
clap = { version = "4.5.9", features = ["derive", "cargo", "string"] }
colored = "2.1.0"
exitcode = "1.1.2"
instrument-repl = { path = "instrument-repl" }
jsonrpsee = { version = "0.22.3", features = ["tokio", "tracing", "server"] }
local-ip-address = "0.6.1"
mdns = { git = "https://github.com/jaime-sense/mdns", rev = "498cf7cceaf7e2683a2e352b7e8a15dfc1c29037" } # until https://github.com/dylanmckay/mdns/pull/27 is closed
minidom = "0.15.2"
mockall = { version = "0.12.1", features = ["nightly"] }
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.3"
reqwest = "0.12.0"
rpassword = "7.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shlex = "1.3.0"
thiserror = "2.0.3"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
windows-sys = { version = "0.52.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }
kic-lib = { path = "kic-lib" }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
undocumented_unsafe_blocks = "deny"
arithmetic_side_effects = "deny"

[workspace.lints.rustdoc]
all = "warn"
missing_doc_code_examples = "warn"

