[package]
name = "instrument-repl"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = "1.3.0"
tracing = { workspace = true }
kic-lib = { workspace = true }
chrono = { workspace = true }
regex = "1.10.3"

