[package]
name = "kic-debug"
description = "A full-featured debugger that runs on an instrument."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shlex = "1.1.0"
chrono = "0.4.29"
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tsp-instrument = { workspace = true }
mockall = { workspace = true }
regex = { workspace = true }