[package]
name = "kic-discover"
description = "A tool to discover the instruments that are connect to your computer or are on your network"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.57"
clap = { workspace = true }
colored = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.28.1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonrpc-http-server = "15.0"
async-std = "1.12.0"
lazy_static = "1.4.0"
mdns = { git = "https://github.com/jaime-sense/mdns", rev = "498cf7cceaf7e2683a2e352b7e8a15dfc1c29037" } # until https://github.com/dylanmckay/mdns/pull/27 is closed
local-ip-address = "0.4.8"
futures = "0.3"
futures-util = "0.3.21"
reqwest = "0.11"
minidom = "0.15.0"
rusb = "0.9.1"
tmc = { workspace = true }
tsp-instrument = { workspace = true }