[package]
name = "kic-discover"
description = "A tool to discover the instruments that are connect to your computer or are on your network"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-std = "1.12.0"
async-trait = "0.1.57"
clap = { workspace = true }
colored = { workspace = true }
futures = "0.3.30"
futures-util = "0.3.30"
jsonrpsee = { workspace = true }
lazy_static = "1.4.0"
local-ip-address = { workspace = true }
mdns = { workspace = true }                         # until https://github.com/dylanmckay/mdns/pull/27 is closed
minidom = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
rusb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tmc = { workspace = true }
tokio = { version = "1.36.0", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tsp-toolkit-kic-lib = { workspace = true }
