[package]
name = "kic-visa"
description = "Tektronix TSP® communications commandline application with VISA support."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
instrument-repl = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kic-lib = { workspace = true, features = ["visa"] }
visa-rs = "0.6.2"
regex = { workspace = true }
windows-sys = { workspace = true }
