[package]
name = "kic"
description = "Keithley Instruments TSP® communications commandline application."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
instrument-repl = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tsp-toolkit-kic-lib = { workspace = true }
windows-sys = { version = "0.52.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }
regex = "1.10.3"

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
undocumented_unsafe_blocks = "deny"
arithmetic_side_effects = "deny"

[lints.rustdoc]
all = "warn"
missing_doc_code_examples = "warn"

