[package]
name = "kic"
description = "Keithley Instruments TSP® communications commandline application."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
instrument-repl = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tsp-toolkit-kic-lib = { workspace = true, features = [] }
windows-sys = { version = "0.52.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }
regex = "1.10.3"
