[package]
name = "kic"
description = "Tektronix TSP® communications commandline application."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[features]
visa = ["kic-lib/visa"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
instrument-repl = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kic-lib = { workspace = true, features = [] }
windows-sys = { workspace = true }
regex = { workspace = true }
